# ParticuleSystem

./: CMakeCache.txt  CMakeLists.txt  Makefile  Particle  ParticuleSystem  README.md  cmake_install.cmake
Classes/: SceneManager.class.cpp  SceneManager.class.hpp  Transform.class.cpp  Transform.class.hpp
Classes/Math/: Mat2.class.cpp  Mat2.class.hpp  Mat3.class.cpp  Mat3.class.hpp  Mat4.class.cpp  Mat4.class.hpp  Vec2.class.cpp  Vec2.class.hpp  Vec3.class.cpp  Vec3.class.hpp  Vec4.class.cpp  Vec4.class.hpp
Classes/Render/: Camera.class.cpp  Camera.class.hpp  RenderManager.class.cpp  RenderManager.class.hpp
Shaders/: general.vert  intro.frag  intro.vert
clProgram/: clProgram.txt
include/: joMath.hpp  particule.hpp  render.hpp  struct.hpp
src/: main.cpp
